log/build_2021-10-28_16-49-15/controller/stderr.log
  File "/home/ghost/Desktop/dev_ws/install/controller/lib/python3.8/site-packages/controller/main.py", line 20
    if np.any(np.not_equal(prev,vdata['data']))
                                              ^
SyntaxError: invalid syntax

